Resolves: tdf#113562 desired window didn't get the input

Change-Id: I4a2089a715dc67783bfd18d2ee0e55193c4ed741
Reviewed-on: https://gerrit.libreoffice.org/44500
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>